--- a/svelte-kanban/package.json
+++ b/svelte-kanban/package.json
@@ -31,6 +31,7 @@
 	"type": "module",
 	"dependencies": {
 		"@supabase/supabase-js": "^2.33.1",
+		"bits-ui": "^0.5.6",
 		"clsx": "^2.0.0",
 		"lucide-svelte": "^0.274.0",
 		"tailwind-merge": "^1.14.0",
